loop to find running tasks